--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of mypkgr is to ...
+The goal of mypkgr is to calculate values of multivariate gaussian density.
 
 ## Installation
 
@@ -36,6 +36,7 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(mypkgr)
 ## basic example code
+mvnpdf(x=matrix(c(1.96,-0.5), ncol=2), Log=FALSE)
 ```
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
