--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ The goal of mypkgr is to calculate values of multivariate gaussian density.
 
 ## Installation
 
-You can install the development version of mypkgr from [GitHub](https://github.com/) with:
+You can install the development version of `mypkgr` from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -33,24 +33,22 @@ devtools::install_github("Florian-40/mypkgr")
 
 This is a basic example which shows you how to solve a common problem:
 
+### Univariate density 
 ```{r example}
 library(mypkgr)
-## basic example code
 mvnpdf(x=matrix(c(1.96,-0.5), ncol=2), Log=FALSE)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
+### Bivariate density
+```{r}
+mvnpdf(x=matrix(rep(1.96,2),nrow=2, ncol=1),Log=FALSE)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
+### Graphical representation.
+```{r}
+pdfvalues <- mvnpdf(x=matrix(seq(-3,3, by=0.1), nrow=1), Log=FALSE)
+plot(pdfvalues)
 ```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+
+
