add travis integration

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # mypkgr
 
 <!-- badges: start -->
+[![Travis build status](https://travis-ci.com/Florian-40/mypkgr.svg?branch=master)](https://travis-ci.com/Florian-40/mypkgr)
 <!-- badges: end -->
 
 The goal of mypkgr is to calculate values of multivariate gaussian density.
