--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.com/Florian-40/mypkgr.svg?branch=master)](https://travis-ci.com/Florian-40/mypkgr)
 <!-- badges: end -->
 
-The goal of mypkgr is to calculate values of multivariate gaussian density.
+The goal of mypkgr is to calculate values of multivariate gaussian density and learning how to build R package. 
 
 ## Installation
 
@@ -51,5 +51,19 @@ pdfvalues <- mvnpdf(x=matrix(seq(-3,3, by=0.1), nrow=1), Log=FALSE)
 plot(pdfvalues)
 ```
 
+## `C++`functions. 
+
+To use `C++` function, we use the code below : 
+```{r}
+Rcpp::sourceCpp("src/timesTwo.cpp")
+timesTwo(12.5)
+```
+
+And for inversion matrix : 
+```{r}
+Rcpp::sourceCpp("src/invC.cpp")
+A<-matrix(c(2,4,7,8,9,5,6,5,4), nrow=3, ncol=3)
+invC(A)
+```
 
 
