--- a/vignettes/execution_time.Rmd
+++ b/vignettes/execution_time.Rmd
@@ -36,7 +36,7 @@ mb <- microbenchmark(mvtnorm::dmvnorm(rep(1.96, 2)),
 
 mb
 expression<-c('dmvnorm', 'mvnpdf')
-autoplot(mb, expression, breaks=c(0.1,1), minor_breaks=c(seq(0,0.1,0.01),seq(0.1,1,0.1)))
+autoplot(mb, expression)
 ```
 
 And with multidimensionnal, we get :
@@ -47,7 +47,7 @@ mb <- microbenchmark(mvtnorm::dmvnorm(matrix(1.96, nrow = n, ncol = 2)),
                      times=100L)
 mb
 expression<-c('dmvnorm', 'mvnpdf')
-autoplot(mb, expression, breaks=c(0.1,1), minor_breaks=c(seq(0,0.1,0.01),seq(0.1,1,0.1)))
+autoplot(mb, expression)
 ```
 
 
@@ -80,7 +80,7 @@ mb <- microbenchmark(mvtnorm::dmvnorm(matrix(1.96, nrow = n, ncol = 2)),
                      times=100L)
 mb
 expression<-c('dmvnorm', 'mvnpdf', 'mvnpdfsmart')
-autoplot(mb, expression, breaks=c(0.1,1), minor_breaks=c(seq(0,0.1,0.01),seq(0.1,1,0.1)))
+autoplot(mb, expression)
 ```
 
 ### `mvnpdfoptim` function. 
@@ -103,7 +103,7 @@ mb <- microbenchmark(mvtnorm::dmvnorm(matrix(1.96, nrow = n, ncol = 2)),
                      times=100L)
 mb
 expression<-c('dmvnorm', 'mvnpdf', 'mvnpdfsmart', 'mvnpdfoptim')
-autoplot(mb, expression, breaks=c(0.1,1), minor_breaks=c(seq(0,0.1,0.01),seq(0.1,1,0.1)))
+autoplot(mb, expression)
 ```
 
 ## Using Rccp Armadillo functions. 
@@ -119,7 +119,7 @@ mb <- microbenchmark(mvtnorm::dmvnorm(matrix(1.96, nrow = n, ncol = 2)),
                      times=100L)
 mb
 expression<-c('dmvnorm', 'mvnpdf', 'mvnpdfsmart', 'mvnpdfoptim', 'mvnpdf_invC')
-autoplot(mb, expression, breaks=c(0.1,1), minor_breaks=c(seq(0,0.1,0.01),seq(0.1,1,0.1)))
+autoplot(mb, expression)
 ```
 
 Now, use complete implementation of `mvnpdfsmart` in C++.
@@ -137,7 +137,7 @@ mb <- microbenchmark(mvtnorm::dmvnorm(matrix(1.96, nrow = n, ncol = 2)),
                      times=100L)
 mb
 expression<-c('dmvnorm', 'mvnpdf', 'mvnpdfsmart', 'mvnpdfoptim', 'mvnpdf_invC', 'mvnpdfC')
-autoplot(mb, expression, breaks=c(0.1,1, 10), minor_breaks=c(seq(0,0.1,0.01),seq(0.1,1,0.1), seq(1,10,1)))
+autoplot(mb, expression)
 ```
 
 ## Parallel code
@@ -146,7 +146,7 @@ autoplot(mb, expression, breaks=c(0.1,1, 10), minor_breaks=c(seq(0,0.1,0.01),seq
 mb <- microbenchmark(log_par(1:100), log_seq(1:100), times=50)
 
 expression <- c('log_par','log_seq')
-autoplot(mb, expression, breaks=c(0.1,1, 10), minor_breaks=c(seq(0,0.1,0.01),seq(0.1,1,0.1), seq(1,10,1)))
+autoplot(mb, expression)
 ```
 
 
