--- a/vignettes/execution_time.Rmd
+++ b/vignettes/execution_time.Rmd
@@ -2,7 +2,6 @@
 title: "execution_time"
 output: 
   rmarkdown::html_vignette: 
-    toc: true
 vignette: >
   %\VignetteIndexEntry{execution_time}
   %\VignetteEngine{knitr::rmarkdown}
@@ -12,9 +11,7 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  fig.height=5, 
-  fig.width = 7
+  comment = "#>"
 )
 ```
 
@@ -142,11 +139,6 @@ autoplot(mb, expression)
 
 ## Parallel code
 
-```{r}
-mb <- microbenchmark(log_par(1:100), log_seq(1:100), times=50)
 
-expression <- c('log_par','log_seq')
-autoplot(mb, expression)
-```
 
 
