--- a/vignettes/execution_time.Rmd
+++ b/vignettes/execution_time.Rmd
@@ -15,8 +15,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+```{r setup }
 library(mypkgr)
+devtools::install_github("Florian-40/microbenchmark", force=TRUE)
 library(microbenchmark)
 library(ggplot2)
 ```
