--- a/vignettes/execution_time.Rmd
+++ b/vignettes/execution_time.Rmd
@@ -147,7 +147,7 @@ Let's try to calculate the logarithm of $n$ numbers.
 mb <- microbenchmark(log_par(1:100), log_seq(1:100), times=50)
 mb
 expression <- c('log_par', 'log_seq')
-autolplot(mb)
+autoplot(mb, expression)
 ```
 
 
